--- a/config.json
+++ b/config.json
@@ -13,7 +13,14 @@
         ]
       }
       ,
-         
+         {
+        "title":"livve",
+        "provider":"stream",
+        "arguments":[
+          "https://bitdash-a.akamaihd.net/content/sintel/hls/playlist.m3u8"
+        ]
+      },
+      
       {
         "title":"مباريات الغد",
         "provider":"webview",
