--- a/config.json
+++ b/config.json
@@ -40,6 +40,14 @@
     ,
         
       {
+        "title":"كأس افريقيا",
+        "provider":"overview",
+        "arguments":[
+          "https://raw.githubusercontent.com/belganaj/kora/master/can22.json"
+        ]
+      }
+    ,
+      {
         "title":"ترتيب الفرق",
         "provider":"overview",
         "arguments":[
@@ -107,6 +115,21 @@
         "provider":"overview",
         "arguments":[
           "https://raw.githubusercontent.com/belganaj/kora/master/tartib.json"
+        ]
+      }
+    ]
+  },
+ {
+    "title":"كأس افريقيا",
+    "drawable":"ic_adventure",
+    "submenu":"",
+    "iap":false,
+    "tabs":[
+      {
+        "title":"",
+        "provider":"overview",
+        "arguments":[
+          "https://raw.githubusercontent.com/belganaj/kora/master/can22.json"
         ]
       }
     ]
