--- a/config.json
+++ b/config.json
@@ -177,7 +177,7 @@
         "title":"",
         "provider":"custom",
         "arguments":[
-          "mailto:admin@yallalive.men",
+          "mailto:filmarma@yallalive.men",
           "url"
         ]
       }
