--- a/config.json
+++ b/config.json
@@ -20,7 +20,15 @@
           "https://raw.githubusercontent.com/belganaj/kora/master/matcheslist.json"
         ]
       }
-  
+      
+    ,
+      {
+        "title":"البطولات",
+        "provider":"overview",
+        "arguments":[
+          "https://raw.githubusercontent.com/belganaj/kora/master/botolat.json"
+        ]
+      }
 
     ,
       {
